# POO2021-2DGM

AltosNizaPruebasCompleto/: CMakeLists.txt
AltosNizaPruebasCompleto/src/: CMakeLists.txt
AltosNizaPruebasCompleto/src/Model/: Admin.cpp  Admin.h  Fundador.cpp  Fundador.h  Propietario.cpp  Propietario.h  Reventa.cpp  Reventa.h
AltosNizaPruebasCompleto/test/: AdminTest.cpp  CMakeLists.txt  PropietarioTest.cpp
CasinoEstudiantes/: CMakeLists.txt  main.cpp
CasinoEstudiantes/Model/: Caballos.cpp  Caballos.h  Casino.cpp  Casino.h  DosColores.cpp  Jugador.cpp  Jugador.h
CasinoEstudiantes/View/: View.cpp  View.h
FigurasGeometricasBasico/: Circulo.cpp  Circulo.h  Main.cpp  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h  View.cpp  View.h  makefile
GIT/: Copia de seguridad de tareaudacity.wbk  tareaudacity.docx
Herencia/EjemploBasico/View/: View.h
LaFarra/: Tienda.cpp  Tienda.h  View.cpp
RepasoP2/: Administracion.cpp  Administracion.h  CMakeLists.txt  Fundador.cpp  Fundador.h  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  Reventa.cpp  Reventa.h
